# BeginnerProjectFallQuarter2025

./: Michael_practicedih_file.py  README.md  pyproject.toml
data/raw_pdfs/: example.txt
latex_documents/: Connor_Mike_Devin_latex_code.tex
practice_files/: dseb_practice_file.py  ocr_project_summary.md
python_notebooks/: demo_image_process_for_training.ipynb  devin_extracting_text_coords.ipynb  example_notebook.ipynb  extracting_text_coords.ipynb  forloop.maddie.py  image_processing_Devin.ipynb  img_processing_v2_Devin.ipynb  processing_pipeline.py  to_implement.ipynb  wordBoxesToSentenceBoxes.ipynb
